# cm-lab1-c

./: CMakeLists.txt  demo.c
src/: parcer.c
tests/: CMakeLists.txt  test_parcer.c
